@@ -1,7 +1,0 @@
-Obsoletes: pupmod-autofs-test
-Requires: pupmod-puppetlabs-concat < 4.0.0-0
-Requires: pupmod-puppetlabs-concat >= 2.2.0-0
-Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
-Requires: pupmod-puppetlabs-stdlib >= 4.13.1-0
-Requires: pupmod-simp-simplib < 4.0.0-0
-Requires: pupmod-simp-simplib >= 3.1.0-0
